Adapt to new ErrorProne configuration